--- a/index.html
+++ b/index.html
@@ -7,13 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1 style="font-size:50px">
+            <span style="color:yellow">Richard Vo</span>
+        </h1>
+        <img src="richardhvsitepic.jpeg" width="301.6" height="452.8"> 
+    </header>
     <div class="container">
-        <h1>Hello, World!</h1>
-        <p>This is a basic webpage example.</p>
+        <h1 style = "color: yellow">
+            <span style="font-size: 30px">Links</span>
+        </h1>
     </div>
-    <div class="container">
-        <h1>testing header</h1>
-        <p>testing for colors</p>
-    </div>
+    <nav>
+        <ul style="list-style-type:none;">
+            <li>
+                <a href="https://github.com/richardhv">GitHub</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/richardhv/">LinkedIn</a>
+            </li>
+        </ul>
+    </nav>
+
+    <section id="education">
+        <h2 style="color:yellow">Education</h2>
+            <h3>
+                Data Science Major at the University of California, Berkeley
+                <span style="color:black">(2018-2023)</span>
+                <p style="font-size: 15px">Domain Emphasis in Economics</p>
+            </h3>
+    </section>        
 </body>
 </html>
