added work experience section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 <span style="color:black">(2018-2023)</span>
                 <p style="font-size: 15px">Domain Emphasis in Economics</p>
             </h3>
+    </section>
+    <section id="experience">
+        <h2 style="color:yellow">Work Experience</h2>
+            <h3>
+                None - I am actively seeking opportunities in software engineering.
+            </h3>
     </section>        
 </body>
 </html>
