added alt text for image src

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 style="font-size:50px">
             <span style="color:yellow">Richard Vo</span>
         </h1>
-        <img src="richardhvsitepic.jpeg" width="301.6" height="452.8"> 
+        <img src="richardhvsitepic.jpeg" width="301.6" height="452.8" alt="RichardV"> 
     </header>
     <div class="container">
         <h1 style = "color: yellow">
